# my_repo

./: BBB  README  README.md  git.txt
08.05.2014/: SinCos30.java  link_f.cpp  sum.sh
08.05.2014/transport/: .main.java.swp  .taxi.java.swp  trans.java
Ani/Ani_java/: Metro.java  main.java
Arman/: README
David/: README
David/HR1/: Date.java  Director.java  Manager.java  Person.java  Test.java  Worker.java  WorkersRepository.java
David/Tasks/: Main.java  ReadArray.java  Readme.txt  Tasks.rtf  outputByDiaganalLeft.txt  outputByDiaganalRight.txt  outputByDown.txt  outputByLeft.txt
HomeWorq/patrasti_tnainner/CMAKE+NINJA/Myproject_Cmake3/: CMakeLists.txt  NEWS  cmake_install.cmake
HomeWorq/patrasti_tnainner/CMAKE+NINJA/Myproject_Cmake3/src/: .CMakeLists.txt.swp  cmake_install.cmake  file2.txt
HomeWorq/tnajin_1/: ip_portscan.sh
HomeWorq_ip_port_scanning-1_1/: fff.sh
Joseph/: .~lock.Tasks.rtf#  MebelFactore.zargo  ParzTivGumar.java  Prime.java  README  linux.txt  po.sh
Joseph/14.05.2014/: BinarySearch.java
Joseph/15.05.2014/: TreeSort.java
Joseph/Ani_java/: Transport.java
Joseph/HomeWorq/patrasti_tnainner/CMAKE+NINJA/Myproject_Cmake3/src/: CMakeLists.txt  file1.txt
Joseph/Jenkins_job/: sum.cpp
Joseph/JosephJava/: ParzTivGumar.java
MYSVN/: README
Naira/: README  README.md
Seroj/: README
Tamara/: README
collective/: README  Tasks.txt
linux/: 3124_desktop_environment.odp  3124_linux_introduction.odp  3124_linux_kernel.odp  3124_users_permissions.odp
patrasti_tnainner/: Joseph___TMP  Super Snake +.sb
sundries/: hello_w.java
tnajin_1/: port.txt  sendmail.sh
(+255 files in other folders)
