cmake_minimum_required (VERSION 2.6)
OPTION(WITH_DEBUG_MODE "Build with debug mode" ON)
if ( NOT UNIX )
        message (FATAL_ERROR "Not Unix!")
    endif ()

    message ("Starting cmake")
set ("${PROJECT}_SOURCE_DIR" src:include)
set ("${PROJECT}_BINARY_DIR"  bin)
set ("${PROJECT}_LIB_DIR" lib)
set (CMAKE_INCLUDE_PATH ${${PROJECT}_SOURCE_DIR})
set (CMAKE_LIBRARY_PATH ${${PROJECT}_LIB_DIR})
set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT}_BINARY_DIR})
set (CMAKE_VERBOSE_MAKEFILE ON)
set (CMAKE_BUILD_TYPE Debug)
set (ERR_NO_UNIX "Cannot build on non Unix systems")

if ( WITH_DEBUG_MODE )
         ADD_DEFINITIONS( -DMY_DEBUG_MODE=1)
     endif()

set (PROJECT myproject)
set (LIBRARIES "")
set (TARGETS "")
set (HEADERS "")
message ( STATUS "SOURCES: ${SOURCES}")
add_subdirectory (src)

#add_executable(${PROJECT}  myproject.cpp ) 
